WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54796
[EFL] SoupSession build break fix
https://bugs.webkit.org/show_bug.cgi?id=54796
Summary
[EFL] SoupSession build break fix
Lukasz Slachciak
Reported
2011-02-18 23:10:48 PST
Just simple change to fix EFL build break
Attachments
Simple build break fix
(1.06 KB, patch)
2011-02-18 23:13 PST
,
Lukasz Slachciak
no flags
Details
Formatted Diff
Diff
build fix
(1.05 KB, patch)
2011-02-18 23:42 PST
,
Lukasz Slachciak
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Lukasz Slachciak
Comment 1
2011-02-18 23:13:34 PST
Created
attachment 83056
[details]
Simple build break fix
Lukasz Slachciak
Comment 2
2011-02-18 23:42:05 PST
Created
attachment 83058
[details]
build fix
WebKit Commit Bot
Comment 3
2011-02-19 01:17:24 PST
Comment on
attachment 83058
[details]
build fix Clearing flags on attachment: 83058 Committed
r79113
: <
http://trac.webkit.org/changeset/79113
>
WebKit Commit Bot
Comment 4
2011-02-19 01:17:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug