2011-02-19  Lukasz Slachciak  <l.slachciak@samsung.com>

Unreviewed build fix.

        SoupSession build break fix
        https://bugs.webkit.org/show_bug.cgi?id=54796

        * ewk/ewk_settings.cpp:
        (ewk_settings_proxy_uri_set):

Canonical link: https://commits.webkit.org/69054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79113 268f45cc-cd09-0410-ab3c-d52691b4dbfc